// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/.env.testing 1`] = `
ACME_ENDPOINT=https://my-json-server.typicode.com/prismatic-io/placeholder-data
ACME_API_KEY=P@s$W0rD

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/.npmrc 1`] = `
@component-manifests:registry=https://example.com/packages/npm

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/.spectral/index.ts 1`] = `
import type { ComponentManifest, ConfigPage, ScopedConfigVar } from "@prismatic-io/spectral";

import type {
  // @ts-ignore
  configPages,
  // @ts-ignore
  componentRegistry,
  // @ts-ignore
  userLevelConfigPages,
  // @ts-ignore
  scopedConfigVars,
} from "../src";

type IsAny<T> = 0 extends 1 & T ? true : false;

type TConfigPages = IsAny<typeof configPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof configPages;

type TUserLevelConfigPages = IsAny<typeof userLevelConfigPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof userLevelConfigPages;

type TComponentRegistry = IsAny<typeof componentRegistry> extends true
  ? { [key: string]: ComponentManifest }
  : typeof componentRegistry;

type TScopedConfigVarMap = IsAny<typeof scopedConfigVars> extends true
  ? { [key: string]: ScopedConfigVar }
  : typeof scopedConfigVars;

declare module "@prismatic-io/spectral" {
  interface IntegrationDefinitionConfigPages extends TConfigPages {}

  interface IntegrationDefinitionUserLevelConfigPages extends TUserLevelConfigPages {}

  interface IntegrationDefinitionComponentRegistry extends TComponentRegistry {}

  interface IntegrationDefinitionScopedConfigVars extends TScopedConfigVarMap {}
}

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/.vscode/extensions.json 1`] = `
{
  "recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode"]
}

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/.vscode/settings.json 1`] = `
{
  "editor.defaultFormatter": "esbenp.prettier-vscode",
  "editor.formatOnSave": true
}

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/documentation.md 1`] = `
# clean-test-integration-legacy

You can make notes about this integration here.
Use [Markdown](https://www.markdownguide.org/basic-syntax/) syntax to format your text.

Your documentation will appear within Prismatic under Management > Documentation.

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/jest.config.js 1`] = `
module.exports = {
  preset: "ts-jest",
  testEnvironment: "node",
};

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/package.json 1`] = `
{
  "name": "clean-test-integration-legacy",
  "version": "0.0.1",
  "main": "index.js",
  "private": true,
  "scripts": {
    "build": "webpack",
    "import": "npm run build && prism integrations:import",
    "test": "jest",
    "lint": "eslint --ext .ts .",
    "typecheck": "tsc --noEmit",
    "format": "prettier --write ."
  },
  "eslintConfig": {
    "root": true,
    "extends": ["@prismatic-io/eslint-config-spectral"]
  },
  "dependencies": {
    "@prismatic-io/spectral": "VERSION"
  },
  "devDependencies": {
    "@prismatic-io/eslint-config-spectral": "2.1.0",
    "@types/jest": "29.5.14",
    "copy-webpack-plugin": "14.0.0",
    "dotenv": "^17.2.2",
    "eslint": "^8.57.1",
    "jest": "29.7.0",
    "prettier": "3.8.3",
    "ts-jest": "29.3.2",
    "ts-loader": "9.5.2",
    "typescript": "^5.8.3",
    "webpack": "5.105.3",
    "webpack-cli": "6.0.1"
  }
}

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/src/client.ts 1`] = `
/**
 * Your flows and data sources likely connect to third-party APIs.
 * In this file, you can set up reusable, authenticated HTTP clients
 * that flows and data sources can use.
 *
 * For more information about reusable HTTP clients, see
 * https://prismatic.io/docs/custom-connectors/get-started/wrap-an-api/#creating-a-shared-http-client
 */

import { type Connection, util } from "@prismatic-io/spectral";
import { createClient } from "@prismatic-io/spectral/dist/clients/http";

export function createApiClient(connection: Connection) {
  const { apiKey, baseUrl } = connection.fields;

  return createClient({
    baseUrl: util.types.toString(baseUrl),
    headers: {
      Accept: "application/json",
      Authorization: \`Bearer \${apiKey}\`,
    },
  });
}
`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/src/componentRegistry.ts 1`] = `
/**
 * Your code-native integration can invoke existing connectors.
 * This is where you declare which connectors your code-native
 * integration uses. For more information, see
 * https://prismatic.io/docs/integrations/code-native/existing-components/
 */

import { componentManifests } from "@prismatic-io/spectral";

export const componentRegistry = componentManifests({
  // This is where you'll register your component manifests
});

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/src/configPages.ts 1`] = `
/**
 * When a customer deploys an instance of your integration,
 * they will walk through a configuration wizard. Define your
 * configuration pages here.
 *
 * For more information on the code-native config wizards, see
 * https://prismatic.io/docs/integrations/code-native/config-wizard/
 */

import { configPage } from "@prismatic-io/spectral";

export const configPages = {
  Connections: configPage({
    elements: {
      // Connections, if there are any, should appear on the first page.
    },
  }),
  "Other Config Variables": configPage({
    elements: {
      // Other configVar elements.
    },
  }),
};

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/src/flows.test.ts 1`] = `
/**
 * Your flows can be tested locally prior to publishing your
 * code-native integration. Add your tests here.
 *
 * You can run this test with "npm run test"
 *
 * For more information on unit testing code-native integrations, see
 * https://prismatic.io/docs/integrations/code-native/testing/
 */

import { invokeFlow } from "@prismatic-io/spectral/dist/testing";

describe("Flow tests", () => {
  test("Example flow test", async () => {
    // Insert test here.
  });
});

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/src/flows.ts 1`] = `
/**
 * Your integration will contain one or more flows that each perform different functions.
 * When the flow is invoked, the onTrigger function runs first, followed by the onExecution
 * function.
 */

import { flow } from "@prismatic-io/spectral";

export const exampleFlow = flow({
  name: "Example Flow",
  stableKey: "00000000-0000-0000-0000-000000000000",
  description: "An example flow",
  onTrigger: async (context, payload, params) => {
    // Trigger logic.
    return Promise.resolve({ payload });
  },
  onExecution: async (context, params) => {
    // Flow logic.
    return { data: "success" };
  },
});

export default [exampleFlow];

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/src/index.ts 1`] = `
/**
 * This project represents a code-native integration. A customer
 * user will walk through a config wizard (defined in configPages.ts),
 * and flows for that customer (defined in flows.ts) will run.
 *
 * To test this integration, run "npm run test". To publish the integration,
 * run "npm run build" and then "prism integrations:import --open".
 */

import { integration } from "@prismatic-io/spectral";
import flows from "./flows";
import { configPages } from "./configPages";
import { componentRegistry } from "./componentRegistry";
import documentation from "../documentation.md";

export { configPages } from "./configPages";
export { componentRegistry } from "./componentRegistry";

export default integration({
  name: "clean-test-integration-legacy",
  description: "Prism-generated Integration",
  iconPath: "icon.png",
  documentation,
  flows,
  configPages,
  componentRegistry,
});

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/src/markdown.d.ts 1`] = `
/**
 * Allow importing markdown files as strings.
 */
declare module "*.md" {
  const content: string;
  export default content;
}

`;

exports[`integrations:init > legacy toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-legacy/tsconfig.json 1`] = `
{
  "compilerOptions": {
    "target": "es6",
    "lib": ["esnext"],
    "strict": true,
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "esnext",
    "moduleResolution": "node"
  },
  "include": ["src", ".spectral/*"]
}

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/.env.testing 1`] = `
ACME_ENDPOINT=https://my-json-server.typicode.com/prismatic-io/placeholder-data
ACME_API_KEY=P@s$W0rD

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/.npmrc 1`] = `
@component-manifests:registry=https://example.com/packages/npm

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/.spectral/index.ts 1`] = `
import type { ComponentManifest, ConfigPage, ScopedConfigVar } from "@prismatic-io/spectral";

import type {
  // @ts-ignore
  configPages,
  // @ts-ignore
  componentRegistry,
  // @ts-ignore
  userLevelConfigPages,
  // @ts-ignore
  scopedConfigVars,
} from "../src";

type IsAny<T> = 0 extends 1 & T ? true : false;

type TConfigPages = IsAny<typeof configPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof configPages;

type TUserLevelConfigPages = IsAny<typeof userLevelConfigPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof userLevelConfigPages;

type TComponentRegistry = IsAny<typeof componentRegistry> extends true
  ? { [key: string]: ComponentManifest }
  : typeof componentRegistry;

type TScopedConfigVarMap = IsAny<typeof scopedConfigVars> extends true
  ? { [key: string]: ScopedConfigVar }
  : typeof scopedConfigVars;

declare module "@prismatic-io/spectral" {
  interface IntegrationDefinitionConfigPages extends TConfigPages {}

  interface IntegrationDefinitionUserLevelConfigPages extends TUserLevelConfigPages {}

  interface IntegrationDefinitionComponentRegistry extends TComponentRegistry {}

  interface IntegrationDefinitionScopedConfigVars extends TScopedConfigVarMap {}
}

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/.vscode/extensions.json 1`] = `
{
  "recommendations": ["dbaeumer.vscode-eslint", "esbenp.prettier-vscode"]
}

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/.vscode/settings.json 1`] = `
{
  "editor.defaultFormatter": "esbenp.prettier-vscode",
  "editor.formatOnSave": true
}

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/documentation.md 1`] = `
# test-integration-legacy

You can make notes about this integration here.
Use [Markdown](https://www.markdownguide.org/basic-syntax/) syntax to format your text.

Your documentation will appear within Prismatic under Management > Documentation.

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/jest.config.js 1`] = `
module.exports = {
  preset: "ts-jest",
  testEnvironment: "node",
};

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/package.json 1`] = `
{
  "name": "test-integration-legacy",
  "version": "0.0.1",
  "main": "index.js",
  "private": true,
  "scripts": {
    "build": "webpack",
    "import": "npm run build && prism integrations:import",
    "test": "jest",
    "lint": "eslint --ext .ts .",
    "typecheck": "tsc --noEmit",
    "format": "prettier --write ."
  },
  "eslintConfig": {
    "root": true,
    "extends": ["@prismatic-io/eslint-config-spectral"]
  },
  "dependencies": {
    "@prismatic-io/spectral": "VERSION"
  },
  "devDependencies": {
    "@prismatic-io/eslint-config-spectral": "2.1.0",
    "@types/jest": "29.5.14",
    "copy-webpack-plugin": "14.0.0",
    "dotenv": "^17.2.2",
    "eslint": "^8.57.1",
    "jest": "29.7.0",
    "prettier": "3.8.3",
    "ts-jest": "29.3.2",
    "ts-loader": "9.5.2",
    "typescript": "^5.8.3",
    "webpack": "5.105.3",
    "webpack-cli": "6.0.1"
  }
}

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/src/client.ts 1`] = `
/**
 * Your flows and data sources likely connect to third-party APIs.
 * In this file, you will see an example of how to set up a reusable,
 * authenticated HTTP client that flows and data sources can use.
 *
 * The createAcmeClient receives a connection that was created
 * when a customer completed the configuration wizard. The API key
 * and base URL from that connection are used to create the HTTP client.
 *
 * For more information about reusable HTTP clients, see
 * https://prismatic.io/docs/custom-connectors/get-started/wrap-an-api/#creating-a-shared-http-client
 */

import { type Connection, util } from "@prismatic-io/spectral";
import { createClient } from "@prismatic-io/spectral/dist/clients/http";

export function createAcmeClient(acmeConnection: Connection) {
  const { apiKey, baseUrl } = acmeConnection.fields;

  return createClient({
    baseUrl: util.types.toString(baseUrl),
    headers: {
      Accept: "application/json",
      Authorization: \`Bearer \${apiKey}\`,
    },
  });
}

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/src/componentRegistry.ts 1`] = `
/**
 * Your code-native integration can invoke existing connectors.
 * This is where you declare which connectors your code-native
 * integration uses. For more information, see
 * https://prismatic.io/docs/integrations/code-native/existing-components/
 */

import { componentManifests } from "@prismatic-io/spectral";

export const componentRegistry = componentManifests({
  // This is where you'll register your component manifests
});

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/src/configPages.ts 1`] = `
/**
 * When a customer deploys an instance of your integration,
 * they will walk through a configuration wizard. In this
 * example configuration wizard, we prompt the customer for
 * their authentication information, and then use that
 * information to fetch data for a dropdown menu.
 *
 * For more information on the code-native config wizards, see
 * https://prismatic.io/docs/integrations/code-native/config-wizard/
 */

import {
  type Connection,
  type Element,
  configPage,
  connectionConfigVar,
  dataSourceConfigVar,
} from "@prismatic-io/spectral";
import { createAcmeClient } from "./client";

export interface Item {
  id: number;
  name: string;
  quantity: number;
}

export const configPages = {
  Connections: configPage({
    elements: {
      // Your end user will enter connection information on the first page
      "Acme Connection": connectionConfigVar({
        stableKey: "00000000-0000-0000-0000-000000000000",
        dataType: "connection",
        inputs: {
          baseUrl: {
            label: "Acme Base URL",
            type: "string",
            required: true,
            default: "https://my-json-server.typicode.com/prismatic-io/placeholder-data",
            example: "https://my-company.api.acme.com/",
          },
          apiKey: {
            label: "Acme API Key",
            placeholder: "Acme API Key",
            type: "password",
            required: true,
            comments: "You can enter any value here for this mock API.",
          },
        },
      }),
    },
  }),
  "Item Configuration": configPage({
    elements: {
      /**
       * Dynamically fetch data using the existing connection, and present the
       * data as a dropdown menu in the config wizard.
       */
      "Select Item": dataSourceConfigVar({
        stableKey: "00000000-0000-0000-0000-000000000000",
        dataSourceType: "picklist",
        perform: async (context) => {
          // Create an authenticated reusable HTTP client from client.ts
          const client = createAcmeClient(context.configVars["Acme Connection"] as Connection);
          const { data: items } = await client.get<Item[]>("/items");
          const options: Element[] = items.map((item) => ({
            key: \`\${item.id}\`,
            label: item.name,
          }));
          return { result: options };
        },
      }),
    },
  }),
};

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/src/flows.test.ts 1`] = `
/**
 * Your flows can be tested locally prior to publishing your
 * code-native integration. In this file, we invoke our flow
 * twice and describe the results we expect to see.
 *
 * You can run this test with "npm run test"
 *
 * For more information on unit testing code-native integrations, see
 * https://prismatic.io/docs/integrations/code-native/testing/
 */

import { invokeFlow } from "@prismatic-io/spectral/dist/testing";
import dotenv from "dotenv";
import { listItems } from "./flows";

dotenv.config({ path: ".env.testing" });

const acmeConnection = {
  key: "Acme Connection",
  fields: {
    baseUrl: process.env.ACME_ENDPOINT,
    apiKey: process.env.ACME_API_KEY,
  },
};

describe("Verify flow works as expected", () => {
  test("Verify we get the correct set of items back", async () => {
    const { result } = await invokeFlow(listItems, {
      configVars: { "Acme Connection": acmeConnection, "Select Item": "2" },
    });
    expect(result?.data).toStrictEqual([
      { id: 1, name: "Widgets", quantity: 20 },
      { id: 2, name: "Whatsits", quantity: 100 },
      { id: 3, name: "Gadgets", quantity: 5 },
    ]);
  });

  test("Verify we see the expected log lines", async () => {
    const { loggerMock } = await invokeFlow(listItems, {
      configVars: { "Acme Connection": acmeConnection, "Select Item": "2" },
    });
    expect(loggerMock.info).toHaveBeenCalledWith(
      'During configuration, the customer selected the item "2"',
    );
    expect(loggerMock.info).toHaveBeenCalledWith('Item "Widgets" with ID "1" has quantity "20"');
  });
});

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/src/flows.ts 1`] = `
/**
 * Your integration will contain one or more flows that each perform different functions.
 * When the flow is invoked, the onTrigger function runs first, followed by the onExecution
 * function. This example flow fetches data from a third-party API and logs out metadata
 * about the data it fetched.
 */

import { flow } from "@prismatic-io/spectral";
import { createAcmeClient } from "./client";
import type { Item } from "./configPages";

export const listItems = flow({
  name: "List Items",
  stableKey: "00000000-0000-0000-0000-000000000000",
  description: "Fetch items from an API",
  onTrigger: async (context, payload, params) => {
    const { logger } = context;

    if (context.debug.enabled) {
      logger.debug(\`Trigger context: \${JSON.stringify(context)}\`);
      logger.debug(\`Trigger payload: \${JSON.stringify(payload)}\`);
      logger.debug(\`Trigger params: \${JSON.stringify(params)}\`);
    }

    return Promise.resolve({ payload });
  },
  onExecution: async (context, params) => {
    context.logger.info(
      \`During configuration, the customer selected the item "\${context.configVars["Select Item"]}"\`,
    );

    // Create an authenticated reusable HTTP client from client.ts
    const acmeErpClient = createAcmeClient(context.configVars["Acme Connection"]);
    const response = await acmeErpClient.get<Item[]>("/items");
    for (const item of response.data) {
      context.logger.info(
        \`Item "\${item.name}" with ID "\${item.id}" has quantity "\${item.quantity}"\`,
      );
    }
    return { data: response.data };
  },
});

export default [listItems];

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/src/index.ts 1`] = `
/**
 * This project represents a code-native integration. A customer
 * user will walk through a config wizard (defined in configPages.ts),
 * and flows for that customer (defined in flows.ts) will run.
 *
 * To test this integration, run "npm run test". To publish the integration,
 * run "npm run build" and then "prism integrations:import --open".
 */

import { integration } from "@prismatic-io/spectral";
import flows from "./flows";
import { configPages } from "./configPages";
import { componentRegistry } from "./componentRegistry";
import documentation from "../documentation.md";

export { configPages } from "./configPages";
export { componentRegistry } from "./componentRegistry";

export default integration({
  name: "test-integration-legacy",
  description: "Prism-generated Integration",
  iconPath: "icon.png",
  documentation,
  flows,
  configPages,
  componentRegistry,
});

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/src/markdown.d.ts 1`] = `
/**
 * Allow importing markdown files as strings.
 */
declare module "*.md" {
  const content: string;
  export default content;
}

`;

exports[`integrations:init > legacy toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-legacy/tsconfig.json 1`] = `
{
  "compilerOptions": {
    "target": "es6",
    "lib": ["esnext"],
    "strict": true,
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "esnext",
    "moduleResolution": "node"
  },
  "include": ["src", ".spectral/*"]
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/.env.testing 1`] = `
ACME_ENDPOINT=https://my-json-server.typicode.com/prismatic-io/placeholder-data
ACME_API_KEY=P@s$W0rD

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/.npmrc 1`] = `
@component-manifests:registry=https://example.com/packages/npm

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/.spectral/index.ts 1`] = `
import type { ComponentManifest, ConfigPage, ScopedConfigVar } from "@prismatic-io/spectral";

import type {
  // @ts-ignore
  configPages,
  // @ts-ignore
  componentRegistry,
  // @ts-ignore
  userLevelConfigPages,
  // @ts-ignore
  scopedConfigVars,
} from "../src";

type IsAny<T> = 0 extends 1 & T ? true : false;

type TConfigPages = IsAny<typeof configPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof configPages;

type TUserLevelConfigPages = IsAny<typeof userLevelConfigPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof userLevelConfigPages;

type TComponentRegistry = IsAny<typeof componentRegistry> extends true
  ? { [key: string]: ComponentManifest }
  : typeof componentRegistry;

type TScopedConfigVarMap = IsAny<typeof scopedConfigVars> extends true
  ? { [key: string]: ScopedConfigVar }
  : typeof scopedConfigVars;

declare module "@prismatic-io/spectral" {
  interface IntegrationDefinitionConfigPages extends TConfigPages {}

  interface IntegrationDefinitionUserLevelConfigPages extends TUserLevelConfigPages {}

  interface IntegrationDefinitionComponentRegistry extends TComponentRegistry {}

  interface IntegrationDefinitionScopedConfigVars extends TScopedConfigVarMap {}
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/.vscode/extensions.json 1`] = `
{
  "recommendations": ["biomejs.biome"]
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/.vscode/settings.json 1`] = `
{
  "editor.defaultFormatter": "biomejs.biome",
  "editor.formatOnSave": true,
  "editor.codeActionsOnSave": {
    "source.organizeImports.biome": "explicit"
  }
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/biome.json 1`] = `
{
  "$schema": "https://biomejs.dev/schemas/2.5.1/schema.json",
  "files": {
    "includes": ["**", "!**/dist", "!**/node_modules"]
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 100
  },
  "assist": {
    "actions": {
      "source": {
        "organizeImports": "on"
      }
    }
  },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended",
      "suspicious": {
        "noExplicitAny": "off",
        "noTsIgnore": "off"
      }
    }
  }
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/documentation.md 1`] = `
# clean-test-integration-modern

You can make notes about this integration here.
Use [Markdown](https://www.markdownguide.org/basic-syntax/) syntax to format your text.

Your documentation will appear within Prismatic under Management > Documentation.

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/package.json 1`] = `
{
  "name": "clean-test-integration-modern",
  "version": "0.0.1",
  "main": "index.js",
  "private": true,
  "scripts": {
    "build": "tsdown",
    "import": "npm run build && prism integrations:import",
    "test": "vitest run",
    "lint": "biome lint .",
    "typecheck": "tsc --noEmit",
    "format": "biome format --write ."
  },
  "dependencies": {
    "@prismatic-io/spectral": "VERSION"
  },
  "devDependencies": {
    "@biomejs/biome": "2.5.1",
    "dotenv": "^17.2.2",
    "tsdown": "0.22.3",
    "typescript": "6.0.3",
    "vitest": "4.1.9"
  }
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/src/client.ts 1`] = `
/**
 * Your flows and data sources likely connect to third-party APIs.
 * In this file, you can set up reusable, authenticated HTTP clients
 * that flows and data sources can use.
 *
 * For more information about reusable HTTP clients, see
 * https://prismatic.io/docs/custom-connectors/get-started/wrap-an-api/#creating-a-shared-http-client
 */

import { type Connection, util } from "@prismatic-io/spectral";
import { createClient } from "@prismatic-io/spectral/dist/clients/http";

export function createApiClient(connection: Connection) {
  const { apiKey, baseUrl } = connection.fields;

  return createClient({
    baseUrl: util.types.toString(baseUrl),
    headers: {
      Accept: "application/json",
      Authorization: \`Bearer \${apiKey}\`,
    },
  });
}
`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/src/componentRegistry.ts 1`] = `
/**
 * Your code-native integration can invoke existing connectors.
 * This is where you declare which connectors your code-native
 * integration uses. For more information, see
 * https://prismatic.io/docs/integrations/code-native/existing-components/
 */

import { componentManifests } from "@prismatic-io/spectral";

export const componentRegistry = componentManifests({
  // This is where you'll register your component manifests
});

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/src/configPages.ts 1`] = `
/**
 * When a customer deploys an instance of your integration,
 * they will walk through a configuration wizard. Define your
 * configuration pages here.
 *
 * For more information on the code-native config wizards, see
 * https://prismatic.io/docs/integrations/code-native/config-wizard/
 */

import { configPage } from "@prismatic-io/spectral";

export const configPages = {
  Connections: configPage({
    elements: {
      // Connections, if there are any, should appear on the first page.
    },
  }),
  "Other Config Variables": configPage({
    elements: {
      // Other configVar elements.
    },
  }),
};

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/src/flows.test.ts 1`] = `
/**
 * Your flows can be tested locally prior to publishing your
 * code-native integration. Add your tests here.
 *
 * You can run this test with "npm run test"
 *
 * For more information on unit testing code-native integrations, see
 * https://prismatic.io/docs/integrations/code-native/testing/
 */

import { invokeFlow } from "@prismatic-io/spectral/dist/testing";

describe("Flow tests", () => {
  test("Example flow test", async () => {
    // Insert test here.
  });
});

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/src/flows.ts 1`] = `
/**
 * Your integration will contain one or more flows that each perform different functions.
 * When the flow is invoked, the onTrigger function runs first, followed by the onExecution
 * function.
 */

import { flow } from "@prismatic-io/spectral";

export const exampleFlow = flow({
  name: "Example Flow",
  stableKey: "00000000-0000-0000-0000-000000000000",
  description: "An example flow",
  onTrigger: async (context, payload, params) => {
    // Trigger logic.
    return Promise.resolve({ payload });
  },
  onExecution: async (context, params) => {
    // Flow logic.
    return { data: "success" };
  },
});

export default [exampleFlow];

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/src/index.ts 1`] = `
/**
 * This project represents a code-native integration. A customer
 * user will walk through a config wizard (defined in configPages.ts),
 * and flows for that customer (defined in flows.ts) will run.
 *
 * To test this integration, run "npm run test". To publish the integration,
 * run "npm run build" and then "prism integrations:import --open".
 */

import { integration } from "@prismatic-io/spectral";
import flows from "./flows";
import { configPages } from "./configPages";
import { componentRegistry } from "./componentRegistry";
import documentation from "../documentation.md";

export { configPages } from "./configPages";
export { componentRegistry } from "./componentRegistry";

export default integration({
  name: "clean-test-integration-modern",
  description: "Prism-generated Integration",
  iconPath: "icon.png",
  documentation,
  flows,
  configPages,
  componentRegistry,
});

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/src/markdown.d.ts 1`] = `
/**
 * Allow importing markdown files as strings.
 */
declare module "*.md" {
  const content: string;
  export default content;
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/tsconfig.json 1`] = `
{
  "compilerOptions": {
    "target": "es2022",
    "lib": ["es2022"],
    "strict": true,
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "esnext",
    "moduleResolution": "bundler",
    "types": ["vitest/globals"],
    "skipLibCheck": true
  },
  "include": ["src", ".spectral/*"]
}

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/tsdown.config.mts 1`] = `
import { defineConfig } from "tsdown";

export default defineConfig({
  entry: { index: "src/index.ts" },
  format: "cjs",
  outDir: "dist",
  platform: "node",
  clean: true,
  dts: false,
  deps: {
    alwaysBundle: () => true,
    onlyBundle: false,
  },
  outExtensions: () => ({ js: ".js" }),
  outputOptions: { exports: "named" },
  loader: {
    ".md": "text",
  },
  copy: [{ from: "assets/*", to: "dist" }],
});

`;

exports[`integrations:init > modern toolchain > clean scaffold generation > should match scaffolding snapshots for clean template > clean-clean-test-integration-modern/vitest.config.ts 1`] = `
import { defineConfig } from "vitest/config";

export default defineConfig({
  test: {
    globals: true,
    environment: "node",
  },
});

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/.env.testing 1`] = `
ACME_ENDPOINT=https://my-json-server.typicode.com/prismatic-io/placeholder-data
ACME_API_KEY=P@s$W0rD

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/.npmrc 1`] = `
@component-manifests:registry=https://example.com/packages/npm

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/.spectral/index.ts 1`] = `
import type { ComponentManifest, ConfigPage, ScopedConfigVar } from "@prismatic-io/spectral";

import type {
  // @ts-ignore
  configPages,
  // @ts-ignore
  componentRegistry,
  // @ts-ignore
  userLevelConfigPages,
  // @ts-ignore
  scopedConfigVars,
} from "../src";

type IsAny<T> = 0 extends 1 & T ? true : false;

type TConfigPages = IsAny<typeof configPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof configPages;

type TUserLevelConfigPages = IsAny<typeof userLevelConfigPages> extends true
  ? { [key: string]: ConfigPage }
  : typeof userLevelConfigPages;

type TComponentRegistry = IsAny<typeof componentRegistry> extends true
  ? { [key: string]: ComponentManifest }
  : typeof componentRegistry;

type TScopedConfigVarMap = IsAny<typeof scopedConfigVars> extends true
  ? { [key: string]: ScopedConfigVar }
  : typeof scopedConfigVars;

declare module "@prismatic-io/spectral" {
  interface IntegrationDefinitionConfigPages extends TConfigPages {}

  interface IntegrationDefinitionUserLevelConfigPages extends TUserLevelConfigPages {}

  interface IntegrationDefinitionComponentRegistry extends TComponentRegistry {}

  interface IntegrationDefinitionScopedConfigVars extends TScopedConfigVarMap {}
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/.vscode/extensions.json 1`] = `
{
  "recommendations": ["biomejs.biome"]
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/.vscode/settings.json 1`] = `
{
  "editor.defaultFormatter": "biomejs.biome",
  "editor.formatOnSave": true,
  "editor.codeActionsOnSave": {
    "source.organizeImports.biome": "explicit"
  }
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/biome.json 1`] = `
{
  "$schema": "https://biomejs.dev/schemas/2.5.1/schema.json",
  "files": {
    "includes": ["**", "!**/dist", "!**/node_modules"]
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 100
  },
  "assist": {
    "actions": {
      "source": {
        "organizeImports": "on"
      }
    }
  },
  "linter": {
    "enabled": true,
    "rules": {
      "preset": "recommended",
      "suspicious": {
        "noExplicitAny": "off",
        "noTsIgnore": "off"
      }
    }
  }
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/documentation.md 1`] = `
# test-integration-modern

You can make notes about this integration here.
Use [Markdown](https://www.markdownguide.org/basic-syntax/) syntax to format your text.

Your documentation will appear within Prismatic under Management > Documentation.

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/package.json 1`] = `
{
  "name": "test-integration-modern",
  "version": "0.0.1",
  "main": "index.js",
  "private": true,
  "scripts": {
    "build": "tsdown",
    "import": "npm run build && prism integrations:import",
    "test": "vitest run",
    "lint": "biome lint .",
    "typecheck": "tsc --noEmit",
    "format": "biome format --write ."
  },
  "dependencies": {
    "@prismatic-io/spectral": "VERSION"
  },
  "devDependencies": {
    "@biomejs/biome": "2.5.1",
    "dotenv": "^17.2.2",
    "tsdown": "0.22.3",
    "typescript": "6.0.3",
    "vitest": "4.1.9"
  }
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/src/client.ts 1`] = `
/**
 * Your flows and data sources likely connect to third-party APIs.
 * In this file, you will see an example of how to set up a reusable,
 * authenticated HTTP client that flows and data sources can use.
 *
 * The createAcmeClient receives a connection that was created
 * when a customer completed the configuration wizard. The API key
 * and base URL from that connection are used to create the HTTP client.
 *
 * For more information about reusable HTTP clients, see
 * https://prismatic.io/docs/custom-connectors/get-started/wrap-an-api/#creating-a-shared-http-client
 */

import { type Connection, util } from "@prismatic-io/spectral";
import { createClient } from "@prismatic-io/spectral/dist/clients/http";

export function createAcmeClient(acmeConnection: Connection) {
  const { apiKey, baseUrl } = acmeConnection.fields;

  return createClient({
    baseUrl: util.types.toString(baseUrl),
    headers: {
      Accept: "application/json",
      Authorization: \`Bearer \${apiKey}\`,
    },
  });
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/src/componentRegistry.ts 1`] = `
/**
 * Your code-native integration can invoke existing connectors.
 * This is where you declare which connectors your code-native
 * integration uses. For more information, see
 * https://prismatic.io/docs/integrations/code-native/existing-components/
 */

import { componentManifests } from "@prismatic-io/spectral";

export const componentRegistry = componentManifests({
  // This is where you'll register your component manifests
});

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/src/configPages.ts 1`] = `
/**
 * When a customer deploys an instance of your integration,
 * they will walk through a configuration wizard. In this
 * example configuration wizard, we prompt the customer for
 * their authentication information, and then use that
 * information to fetch data for a dropdown menu.
 *
 * For more information on the code-native config wizards, see
 * https://prismatic.io/docs/integrations/code-native/config-wizard/
 */

import {
  type Connection,
  type Element,
  configPage,
  connectionConfigVar,
  dataSourceConfigVar,
} from "@prismatic-io/spectral";
import { createAcmeClient } from "./client";

export interface Item {
  id: number;
  name: string;
  quantity: number;
}

export const configPages = {
  Connections: configPage({
    elements: {
      // Your end user will enter connection information on the first page
      "Acme Connection": connectionConfigVar({
        stableKey: "00000000-0000-0000-0000-000000000000",
        dataType: "connection",
        inputs: {
          baseUrl: {
            label: "Acme Base URL",
            type: "string",
            required: true,
            default: "https://my-json-server.typicode.com/prismatic-io/placeholder-data",
            example: "https://my-company.api.acme.com/",
          },
          apiKey: {
            label: "Acme API Key",
            placeholder: "Acme API Key",
            type: "password",
            required: true,
            comments: "You can enter any value here for this mock API.",
          },
        },
      }),
    },
  }),
  "Item Configuration": configPage({
    elements: {
      /**
       * Dynamically fetch data using the existing connection, and present the
       * data as a dropdown menu in the config wizard.
       */
      "Select Item": dataSourceConfigVar({
        stableKey: "00000000-0000-0000-0000-000000000000",
        dataSourceType: "picklist",
        perform: async (context) => {
          // Create an authenticated reusable HTTP client from client.ts
          const client = createAcmeClient(context.configVars["Acme Connection"] as Connection);
          const { data: items } = await client.get<Item[]>("/items");
          const options: Element[] = items.map((item) => ({
            key: \`\${item.id}\`,
            label: item.name,
          }));
          return { result: options };
        },
      }),
    },
  }),
};

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/src/flows.test.ts 1`] = `
/**
 * Your flows can be tested locally prior to publishing your
 * code-native integration. In this file, we invoke our flow
 * twice and describe the results we expect to see.
 *
 * You can run this test with "npm run test"
 *
 * For more information on unit testing code-native integrations, see
 * https://prismatic.io/docs/integrations/code-native/testing/
 */

import { invokeFlow } from "@prismatic-io/spectral/dist/testing";
import dotenv from "dotenv";
import { listItems } from "./flows";

dotenv.config({ path: ".env.testing" });

const acmeConnection = {
  key: "Acme Connection",
  fields: {
    baseUrl: process.env.ACME_ENDPOINT,
    apiKey: process.env.ACME_API_KEY,
  },
};

describe("Verify flow works as expected", () => {
  test("Verify we get the correct set of items back", async () => {
    const { result } = await invokeFlow(listItems, {
      configVars: { "Acme Connection": acmeConnection, "Select Item": "2" },
    });
    expect(result?.data).toStrictEqual([
      { id: 1, name: "Widgets", quantity: 20 },
      { id: 2, name: "Whatsits", quantity: 100 },
      { id: 3, name: "Gadgets", quantity: 5 },
    ]);
  });

  test("Verify we see the expected log lines", async () => {
    const { loggerMock } = await invokeFlow(listItems, {
      configVars: { "Acme Connection": acmeConnection, "Select Item": "2" },
    });
    expect(loggerMock.info).toHaveBeenCalledWith(
      'During configuration, the customer selected the item "2"',
    );
    expect(loggerMock.info).toHaveBeenCalledWith('Item "Widgets" with ID "1" has quantity "20"');
  });
});

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/src/flows.ts 1`] = `
/**
 * Your integration will contain one or more flows that each perform different functions.
 * When the flow is invoked, the onTrigger function runs first, followed by the onExecution
 * function. This example flow fetches data from a third-party API and logs out metadata
 * about the data it fetched.
 */

import { flow } from "@prismatic-io/spectral";
import { createAcmeClient } from "./client";
import type { Item } from "./configPages";

export const listItems = flow({
  name: "List Items",
  stableKey: "00000000-0000-0000-0000-000000000000",
  description: "Fetch items from an API",
  onTrigger: async (context, payload, params) => {
    const { logger } = context;

    if (context.debug.enabled) {
      logger.debug(\`Trigger context: \${JSON.stringify(context)}\`);
      logger.debug(\`Trigger payload: \${JSON.stringify(payload)}\`);
      logger.debug(\`Trigger params: \${JSON.stringify(params)}\`);
    }

    return Promise.resolve({ payload });
  },
  onExecution: async (context, params) => {
    context.logger.info(
      \`During configuration, the customer selected the item "\${context.configVars["Select Item"]}"\`,
    );

    // Create an authenticated reusable HTTP client from client.ts
    const acmeErpClient = createAcmeClient(context.configVars["Acme Connection"]);
    const response = await acmeErpClient.get<Item[]>("/items");
    for (const item of response.data) {
      context.logger.info(
        \`Item "\${item.name}" with ID "\${item.id}" has quantity "\${item.quantity}"\`,
      );
    }
    return { data: response.data };
  },
});

export default [listItems];

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/src/index.ts 1`] = `
/**
 * This project represents a code-native integration. A customer
 * user will walk through a config wizard (defined in configPages.ts),
 * and flows for that customer (defined in flows.ts) will run.
 *
 * To test this integration, run "npm run test". To publish the integration,
 * run "npm run build" and then "prism integrations:import --open".
 */

import { integration } from "@prismatic-io/spectral";
import flows from "./flows";
import { configPages } from "./configPages";
import { componentRegistry } from "./componentRegistry";
import documentation from "../documentation.md";

export { configPages } from "./configPages";
export { componentRegistry } from "./componentRegistry";

export default integration({
  name: "test-integration-modern",
  description: "Prism-generated Integration",
  iconPath: "icon.png",
  documentation,
  flows,
  configPages,
  componentRegistry,
});

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/src/markdown.d.ts 1`] = `
/**
 * Allow importing markdown files as strings.
 */
declare module "*.md" {
  const content: string;
  export default content;
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/tsconfig.json 1`] = `
{
  "compilerOptions": {
    "target": "es2022",
    "lib": ["es2022"],
    "strict": true,
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,
    "module": "esnext",
    "moduleResolution": "bundler",
    "types": ["vitest/globals"],
    "skipLibCheck": true
  },
  "include": ["src", ".spectral/*"]
}

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/tsdown.config.mts 1`] = `
import { defineConfig } from "tsdown";

export default defineConfig({
  entry: { index: "src/index.ts" },
  format: "cjs",
  outDir: "dist",
  platform: "node",
  clean: true,
  dts: false,
  deps: {
    alwaysBundle: () => true,
    onlyBundle: false,
  },
  outExtensions: () => ({ js: ".js" }),
  outputOptions: { exports: "named" },
  loader: {
    ".md": "text",
  },
  copy: [{ from: "assets/*", to: "dist" }],
});

`;

exports[`integrations:init > modern toolchain > scaffold generation > should match scaffolding snapshots for default template > test-integration-modern/vitest.config.ts 1`] = `
import { defineConfig } from "vitest/config";

export default defineConfig({
  test: {
    globals: true,
    environment: "node",
  },
});

`;
